# LunarCalendar

./: .gitignore  .gitmodules  .travis.yml  Authors.md  Authors_zh_CN.md  CMakeLists.txt  ChangeLog.md  Doxyfile.in  LunarCalendar.cpp  LunarCalendar.h  LunarCalendar.keystore  LunarCalendar.pri  LunarCalendar.pro  LunarCalendar.ui  LunarCalendarModel.cpp  LunarCalendarModel.h  MainWindow.cpp  MainWindow.h  README.md  README_zh_CN.md  Resource.qrc  \  appveyor.yml  build_debpackage.sh  deploy.sh  release.sh  tag.sh  vcpkg.json
.github/: msvc.yml  ubuntu.yml  windows.yml
.github/workflows/: android.yml  build.yml  codespell.yml  doxygen.yml  macos.yml  mingw.yml  msvc.yml  qmake.yml  ubuntu.yml
3th_lib/: RabbitCommon.pro
App/: App.pro  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
App/Resource/: Resource.qrc
App/Resource/Translations/: LunarCalendarApp_ar.ts  LunarCalendarApp_ca.ts  LunarCalendarApp_cs.ts  LunarCalendarApp_da.ts  LunarCalendarApp_de.ts  LunarCalendarApp_el.ts  LunarCalendarApp_en.ts  LunarCalendarApp_en_GB.ts  LunarCalendarApp_es.ts  LunarCalendarApp_et.ts  LunarCalendarApp_fi.ts  LunarCalendarApp_fr.ts  LunarCalendarApp_gd.ts  LunarCalendarApp_gl.ts  LunarCalendarApp_hu.ts  LunarCalendarApp_it.ts  LunarCalendarApp_ja.ts  LunarCalendarApp_ko.ts  LunarCalendarApp_nb.ts  LunarCalendarApp_ne.ts  LunarCalendarApp_nl.ts  LunarCalendarApp_nn.ts  LunarCalendarApp_oc.ts  LunarCalendarApp_pl.ts  LunarCalendarApp_pt_BR.ts  LunarCalendarApp_pt_PT.ts  LunarCalendarApp_ro.ts  LunarCalendarApp_ru.ts  LunarCalendarApp_sk.ts  LunarCalendarApp_sl.ts  LunarCalendarApp_sv.ts  LunarCalendarApp_th.ts  LunarCalendarApp_tr.ts  LunarCalendarApp_uk.ts  LunarCalendarApp_zh.ts  LunarCalendarApp_zh_CN.ts  LunarCalendarApp_zh_TW.ts  LunarCalendarApp_zh_rCN.ts  LunarCalendarApp_zh_rTW.ts  Translations.pri
App/android/: AndroidManifest.xml  build.gradle
App/android/res/values/: strings.xml
App/android/res/values-zh/: strings.xml
Docs/: Developer.md  User.md
Docs/doxygen/: footer.html
Install/: Install.nsi  install.sh
Package/: CMakeCPack.cmake
Src/: CMakeLists.txt  CalendarLunar.cpp  CalendarLunar.h  FrmCell.cpp  FrmCell.h  FrmCell.ui  FrmLunarCalendarPlugin.cpp  FrmLunarCalendarPlugin.h  LunarCalendar.cpp  LunarCalendar.h  LunarCalendar.pri  LunarCalendar.pro  LunarCalendar.ui  LunarCalendarDelegate.cpp  LunarCalendarDelegate.h  LunarCalendarModel.cpp  LunarCalendarModel.h  LunarTable.cpp  LunarTable.h  lunar_calendar_export.h  lunar_calendar_export_linux.h  lunar_calendar_export_windows.h  lunarcalendar_export.h  lunarcalendar_export_linux.h  lunarcalendar_export_windows.h
Src/Resource/: ResourceLunarCalendar.qrc  ResourceSql.qrc
Src/Resource/Translations/: LunarCalendar_ar.ts  LunarCalendar_ca.ts  LunarCalendar_cs.ts  LunarCalendar_da.ts  LunarCalendar_de.ts  LunarCalendar_el.ts  LunarCalendar_en.ts  LunarCalendar_en_GB.ts  LunarCalendar_es.ts  LunarCalendar_et.ts  LunarCalendar_fi.ts  LunarCalendar_fr.ts  LunarCalendar_gd.ts  LunarCalendar_gl.ts  LunarCalendar_hu.ts  LunarCalendar_it.ts  LunarCalendar_ja.ts  LunarCalendar_ko.ts  LunarCalendar_nb.ts  LunarCalendar_ne.ts  LunarCalendar_nl.ts  LunarCalendar_nn.ts  LunarCalendar_oc.ts  LunarCalendar_pl.ts  LunarCalendar_pt_BR.ts  LunarCalendar_pt_PT.ts  LunarCalendar_ro.ts  LunarCalendar_ru.ts  LunarCalendar_sk.ts  LunarCalendar_sl.ts  LunarCalendar_sv.ts  LunarCalendar_th.ts  LunarCalendar_tr.ts  LunarCalendar_uk.ts  LunarCalendar_zh_CN.ts  LunarCalendar_zh_TW.ts  Translations.pri
Src/Resource/database/: chines_holidays.sql  chinese_holidays.sql  holiday.db  holidays.sql
Src/Resource/icons/rabbit-black/: index.theme
Src/Resource/icons/rabbit-green/: index.theme
Src/database/: db.sqlite  holidays.sql
Src/export/: lunarcalendar_export_linux.h  lunarcalendar_export_windows.h
Update/: update.xml  update_android.xml  update_linux.xml  update_windows.xml
ci/: build-install-tools-windows.sh  build-install-tools.sh  build.sh  qt-installer.sh
cmake/: Android.cmake  DownloadFile.cmake  LunarCalendar.pc.in  LunarCalendarConfig.cmake.in  Translations.cmake
debian/: LunarCalendar.desktop  README  README.Debian  README.source  changelog  control  copyright  lunarcalendar.cron.d.ex  lunarcalendar.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst  postinst.ex  postrm  postrm.ex  preinst  rules  watch
html/: CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp_source.html  CalendarLunar_8cpp_source.html  CalendarLunar_8h_source.html  FrmLunarCalendarPlugin_8cpp_source.html  FrmLunarCalendarPlugin_8h_source.html  LunarCalendarDelegate_8cpp_source.html  LunarCalendarDelegate_8h_source.html  LunarCalendarModel_8cpp_source.html  LunarCalendarModel_8h_source.html  LunarCalendar_8cpp_source.html  LunarCalendar_8h_source.html  LunarTable_8cpp_source.html  LunarTable_8h_source.html  MainWindow_8cpp_source.html  MainWindow_8h_source.html  RabbitCommon_2rabbitcommon__export_8h_source.html  Src_2lunarcalendar__export_8h_source.html  annotated.html  chinese__holidays_8sql_source.html  classCCalendarLunar-members.html  classCCalendarLunar.html  classCFrmLunarCalendarPlugin-members.html  classCFrmLunarCalendarPlugin.html  classCHandler-members.html  classCHandler.html  classCLunarCalendar-members.html  classCLunarCalendar.html  classCLunarCalendarDelegate-members.html  classCLunarCalendarDelegate.html  classCLunarCalendarHeaderDelegate-members.html  classCLunarCalendarHeaderDelegate.html  classCLunarCalendarModel-members.html  classCLunarCalendarModel.html  classCLunarCalendarPrivate-members.html  classCLunarCalendarPrivate.html  classCLunarCalendar_1_1CTaskHandler-members.html  classCLunarCalendar_1_1CTaskHandler.html  classCLunarTable-members.html  classCLunarTable.html  (+54 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  (+71 more)
pri/: Translations.pri  lrelease.pri
share/: LunarCalendar.sh  io.github.KangLin.LunarCalendar.desktop.in  org.Rabbit.LunarCalendar.desktop
test/: test_linux.sh
